apache-hello/hello-apache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-apache-svc
  namespace: ns1
  labels:
    app: hello-apache-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-apache
  type: ClusterIP
